# polymarket-ai-agents

./: .env.example  .gitignore  Dockerfile  PLAN.md  docker-compose.yml  main.py  pyproject.toml  run.sh
app/: main.py
app/core/: config.py  db.py
collectors/: base.py  breaking_news_monitor.py  market_collector.py  news_collector.py
workers/: data_validator_worker.py
